# aya-script

./: .travis.yml  LICENSE  README.md  aya-script.cabal  stack.yaml
app/: Main.hs
src/: AyaScript.hs  Lib.hs
src/AyaScript/: Expr.hs  GenES.hs  Parser.hs  Program.hs  Stmt.hs  Types.hs
test/: Spec.hs
