name:                aya-script
version:             0.1.0.0
description:         AyaScript compiler
homepage:            http://github.com/AyaMorisawa/aya-script
license:             MIT
license-file:        LICENSE
author:              Aya Morisawa
maintainer:          AyaMorisawa4869@gmial.com
copyright:           (c) 2015 Aya Morisawa
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AyaScript
                     , AyaScript.GenES
                     , AyaScript.Types
                     , AyaScript.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , aeson
                     , bytestring
  default-language:    Haskell2010

executable asc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aya-script
  default-language:    Haskell2010

test-suite aya-script-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , aya-script
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AyaMorisawa/aya-script
